Fixed listing bar on mobile

--- a/client/src/components/PropertyListings/ListingBar/styles.css
+++ b/client/src/components/PropertyListings/ListingBar/styles.css
@@ -150,3 +150,37 @@
   gap: 0.75rem;
   padding-left: 1rem;
 }
+
+@media screen and (max-width: 768px) {
+  #property-listing-bar {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    padding: 1rem;
+    gap: 1rem;
+  }
+
+  #property-listing-inputs {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 0.75rem;
+  }
+
+  #property-listing-search-bar {
+    margin-left: 0;
+    width: 100%;
+  }
+
+  #property-listing-dog-icon {
+    align-self: center;
+    margin-right: 0;
+  }
+
+  #property-listing-price,
+  #property-listing-bed-bath,
+  .property-listing-home-lease-type {
+    width: 100%;
+  }
+}
